# sicbo

./: Dockerfile  README.md
sicbo_api/: Cargo.toml  README.md
sicbo_api/src/: main.rs
sicbo_dapp/: next.config.js  package.json
sicbo_dapp/src/c/: dice.tsx  header.module.scss  header.tsx  index.module.scss  index.tsx  utils.ts
sicbo_dapp/src/pages/: _app.tsx  _document.tsx  index.tsx
sicbo_dapp/src/styles/: globals.scss  index.module.scss
sicbo_node/: .env.local  README.md  package-lock.json  package.json
sicbo_node/sql/: sicbo.sql
sicbo_node/src/: configuration.ts
sicbo_node/src/app/comm/: redis.ts  utils.ts
sicbo_node/src/app/constant/: game.ts
sicbo_node/src/app/controller/: contract.ts  game.ts  player.ts
sicbo_node/src/app/entity/: bankerRecord.ts  gameRecord.ts  player.ts  playerRecord.ts
sicbo_node/src/app/mapping/: bankerRecord.ts  gameRecord.ts  player.ts  playerRecord.ts
sicbo_node/src/app/model/dto/: base.ts
sicbo_node/src/app/model/dto/game/: game.ts
sicbo_node/src/app/service/: game.ts  player.ts  sicbo.ts
sicbo_node/src/config/: config.default.ts
sicbo_node/src/core/: baseMapping.ts  baseService.ts
sicbo_program/: README.md  program.json
sicbo_program/src/: main.leo
